# medical_diagnostics

./: .env.sample  README.md  blog.json  catalog.json  manage.py  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_service_options_appointment.py  0004_alter_appointment_options_alter_appointment_service.py
medical_diagnostics/: asgi.py  settings.py  urls.py  wsgi.py
static/images/: hashes.json
static/mobirise/css/: mbr-additional.css
static/theme/js/: script.js
templates/blog/: blog_detail.html  blog_form.html  blog_list.html
templates/catalog/: about_us.html  appointment_confirm_delete.html  appointment_detail.html  appointment_form.html  appointment_list.html  category_confirm_delete.html  category_detail.html  category_form.html  category_list.html  contact.html  index.html  service_confirm_delete.html  service_detail.html  service_form.html  service_list.html
templates/catalog/includes/: inc_footer.html  inc_main_menu.html
templates/users/: login.html  register.html  reset_password.html  user_form.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
