[tool.poetry]
name = "medical-diagnostics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "medical_diagnostics"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
